# minecraft_server_copy

./: 1.20.1_blocks.json  1.20.1_items.json  Cargo.toml  README.md  build.sh  config.toml  test.rs
ref/: registry_codec.json
releases/Random Chunks/Size/: linux
releases/Random Chunks/Size (agressive)/: linux
releases/Random Chunks/Speed/: linux
releases/See Others/Size/: linux
releases/See Others/Size (agressive)/: linux
releases/See Others/Speed/: linux
releases/Valentine's day special/Size/: linux
releases/Valentine's day special/Size (agressive)/: linux
releases/Valentine's day special/Speed/: linux
releases/Worldgen (unoptimized)/Size/: linux
releases/Worldgen (unoptimized)/Size (agressive)/: linux
releases/Worldgen (unoptimized)/Speed/: linux
releases/Worldgen (unoptimized)/Speed (compressed)/: linux
src/: client.rs  config.rs  main.rs  testing.rs  tests.rs
src/leb128_async/: mod.rs
src/server/: mod.rs  state.rs  util.rs
src/server/net/: connection.rs  connections.rs  mod.rs  packets.rs
src/server/net/connection_manager/: accept_connections.rs  mod.rs  receive_manager.rs  receive_packets.rs  send_manager.rs  send_packets.rs  types.rs
src/server/types/: angle.rs  block.rs  block_states.rs  chunk.rs  chunk_section.rs  dimension.rs  entity_metadata.rs  entity_metadata_field.rs  gamemode.rs  interaction_type.rs  leb128.rs  mod.rs  palette.rs  paletted_container.rs  player_actions.rs  player_command_action.rs  player_info_update_actions.rs  position.rs  string.rs  uuid.rs  varint.rs  varlong.rs
