[package]
name = "minecraft_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.0"
bounded-integer = {version = "0.5.7", features = ["types"]}
bracket-noise = "0.8.7"
byteorder = "1.5.0"
chrono = "0.4.34"
confy = "0.6.1"
enum_stringify = "0.4.0"
env_logger = "0.11.2"
fastnbt = "2.5.0"
itertools = "0.12.1"
lazy_static = "1.4.0"
leb128 = "0.2.5"
log = "0.4.21"
md5 = "0.7.0"
rand = "0.8.5"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
serde_with = "3.6.1"
sha256 = "1.5.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.size]
inherits = "release"
build-override.opt-level = "z"
opt-level = "z"
